# fortify

./: .golangci.yml  README.md  api.go  api_test.go  compose.yml  config.yml  db.go  dockerfile  gen.go  gen_test.go  go.mod  go.sum  justfile  main.go  server.go  server_test.go
.github/workflows/: fortify-push-image.yml  fortify-test.yml  generator-push-image.yml  generator-test.yml  go-lang-test-action.yml  qa-test.yml  test-action.yml  test-repo.yml
actions/build-go/: action.yml
actions/build-push-docker/: action.yml
actions/build-service/: action.yml
actions/lint-go/: action.yml
actions/push-docker/: action.yml  action_1.yml
actions/run-linter/: action.yml
actions/run-tests/: action.yml
actions/set-environment-variables/: action.yml
actions/test-go/: action.yml
compose/: passMan-pass-gen-env
configuration/local/: test-env
dev-setup/: README.md
docs/: docker.md  github-actions.md  monorepo.md  tools.md
docs/how-to/: create-new-image-repository.md  push-images-to-ecr.md  run-all-services-locally.md  run-k8s-cluster.md  set-a-services-environment-variables.md  set-iam-bot-user-credentials-for-github-actions.md  set-k8s-secrets.md  (+1 more)
fortify-tests/: .gitignore  README.md  justfile  pyproject.toml
fortify-tests/tests/: conftest.py
fortify-tests/tests/e2e/: test_e2e.py
fortify-tests/tests/integration/: test_databases.py  test_healthcheck.py  test_services.py
fortify-tests/tests/perf/: load_test.toml  perf.py
fortify-tests/tests/utils/: validation.py
infra/: .gitignore  README.md
static/: main.js
templates/: index.tmpl.html
(+111 files in other folders)
